# octree

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: octree.hpp  octree.tpp  octree_alt.hpp
src/: example.cpp  tests.cpp  tests_alt.cpp
